tests/invalid/export_string_return_not_supported.wio
@Export
fn GetName() -> string {
    return "Wio";
}

fn Entry() -> i32 {
    return 0;
}
